# RTYPE-mirror

./: .all-contributorsrc  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  build.sh  log  log.txt  map_test_1.json  test.py  vcpkg.json
.github/workflows/: workflow.yaml  worklow.yaml
client/: CMakeLists.txt
client/assets/accessibility_shaders/: deuteranopia.fs  protanopia.fs  tritanopia.fs
client/assets/voxels/: enemy_spaceship_1.vox  player_basic_shot.vox  title.vox
client/assets/voxels/enemy/shot/: enemy_basic_shot.vox
client/assets/voxels/enemy/spaceship/: boss_spaceship_1.vox  enemy_spaceship_1.vox  enemy_spaceship_2.vox
client/assets/voxels/player/shot/: player_charged_shot.vox
client/assets/voxels/player/spaceship/: player_spaceship_1.vox  player_spaceship_2.vox  player_spaceship_3.vox
client/assets/voxels/shaders/: voxel_lighting.fs  voxel_lighting.vs
client/assets/voxels/title/: title_blue.vox
client/include/: Main.hpp
client/include/core/: Game.hpp  Lights.hpp  Particle.hpp  ParticleSystem.hpp
client/include/ecs/: Components.hpp  DataType.hpp  Display.hpp  Events.hpp  Systems.hpp
client/include/ecs/Components/: Controls.hpp  Selectors.hpp
client/include/game/: GameState.hpp
client/include/queue/: MessageQueue.hpp
client/include/raylib/: kbd_layout.h
client/settings/: settings.json
client/src/: Main.cpp  Utils.cpp  kbd_layout.cpp  main.cpp
client/src/Components/: ButtonComponent.cpp  Components.cpp  ControlComponent.cpp  ImageComponent.cpp  NumberInputComponent.cpp  PopupComponent.cpp  ScoreComponent.cpp  ShowBoxComponent.cpp  TextInputComponent.cpp
client/src/core/: Game.cpp  Light.cpp  Particle.cpp  ParticleSystem.cpp
client/src/game/: GameState.cpp
client/src/initialisation/: Init_ecs.cpp  Init_lobby_entity.cpp  Init_menu_entity.cpp  Save_controls.cpp  Window_init.cpp  init_ecs.cpp  init_menu_entity.cpp
client/src/systems/: ChangeWindow_systems.cpp  Change_ship.cpp  Components.hpp  Controls.cpp  Controls_systems.cpp  Events.hpp  Focus_systems.cpp  Menu_systems.cpp  Models.cpp  Models_systems.cpp  Particles_systems.cpp  Selector_systems.cpp  Settings_systems.cpp  Systems.hpp  Window_systems.cpp
client/src/systems/include/: Components.hpp  DataType.hpp  Events.hpp  Systems.hpp
client/src/systems/window/: EndGame_systems.cpp  End_game_systems.cpp  Game_systems.cpp  Game_utils.cpp  Lobby_display.cpp  Lobby_systems.cpp  Menu_display.cpp  Menu_systems.cpp  Window_systems.cpp
docs/: Client.md  index.md
docs/client/: Client.md  GraphicalLibraryChoice.md
docs/server/: Server.md
docs/shared/: Ecs.md  Network_library.md
docs/tower_defense/: Tower_defense.md
documentation/: Ecs.md
documentation/client/: GraphicalLibraryChoice.md
documentation/server/: Server.md
documentation/shared/: Ecs.md
server/: CMakeLists.txt
server/include/: ClientData.hpp  Game.hpp  GameData.hpp  Lobby.hpp  Room.hpp  Server.hpp  ThreadPool.hpp  Utils.hpp
server/levels/: map1.json  map2.json  map3.json
server/src/: ClientData.cpp  Game.cpp  Lobby.cpp  Lobby.hpp  Room.cpp  Server.cpp  ThreadPool.cpp  Utils.cpp  main.cpp
shared/: CMakeLists.txt
shared/include/: Entity.hpp  NetworkWrapper.hpp  Packet.hpp  PeerWrapper.hpp  Registry.hpp  Sparse_array.hpp
shared/include/network/: Client.hpp  NetworkWrapper.hpp  PeerWrapper.hpp  Server.hpp
shared/include/network/event/: ClientEvent.hpp  Event.hpp  ServerEvent.hpp
shared/include/network/packet/: ClientPacket.hpp  Packet.hpp  PacketHeader.hpp  ServerPacket.hpp
shared/include/raylib/: raygui.h
shared/src/: NetworkWrapper.cpp  Packet.cpp  raygui_impl.cpp
shared/src/network/: Client.cpp  NetworkWrapper.cpp  Packet.cpp  Server.cpp
tests/: test_system_event.cpp  tests_registry.cpp  tests_sparse_array.cpp
tower_defense/: CMakeLists.txt
tower_defense/include/: Main.hpp
tower_defense/include/ecs/: Components.hpp  DataType.hpp  Events.hpp  Systems.hpp
tower_defense/include/initialisation/: Parser.hpp
tower_defense/include/raylib/: raygui.h
tower_defense/levels/: map.MD
tower_defense/src/: Main.cpp
tower_defense/src/initialisation/: Init_ecs.cpp  Parser.cpp
tower_defense/src/systems/: Controls_systems.cpp  Window_systems.cpp
tower_defense/src/systems/game/: Game_components.cpp  Game_systems.cpp
